unit test- getByQueryParamHappyFlow